--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ianms-moss/Employee-Tracker#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "inquirer": "^9.0.0",
     "mysql2": "^2.3.3"
   }
