reordered seed data for employees so it would properly seed

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/ianms-moss/Employee-Tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
-    "inquirer": "^9.0.0",
+    "inquirer": "^6.5.0",
     "mysql2": "^2.3.3"
   }
 }
