added ascii art to the beginning, updated readme

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/ianms-moss/Employee-Tracker#readme",
   "dependencies": {
-    "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
+    "figlet": "^1.5.2",
     "inquirer": "^6.5.0",
     "mysql2": "^2.3.3"
   }
